# PSEchallenge

./: CMakeLists.txt  LICENSE  README.md  main.cpp
docker/: Dockerfile  Dockerfile.cmake3.14  Dockerfile.cv4.2.0
stereo_util/: CMakeLists.txt  chrono_lib.h  stereodisparity.cpp  stereodisparity.h  stereoread.cpp  stereoread.h  stereorectify.cpp  stereorectify.h  stereostruct.h
tests/: CMakeLists.txt  stereo_util_test.cpp
tests/data/: intrinsics.yml
