cmake_minimum_required(VERSION 3.0)
project(challenge)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage -fprofile-arcs -ftest-coverage")
set(OPENCV_DIR /usr/local/lib/cmake/opencv4)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_subdirectory(stereo_util)
add_executable(challenge main.cpp)
target_link_libraries(challenge LINK_PUBLIC stereo_util ${OpenCV_LIBS})
